--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,6 +6,9 @@
     <title>Chrome Addon v3: popup</title>
 </head>
 <body>
-    This is the <span class="special-text">HTML</span> body of the addon.
+    <h3>Echo 360 Lecture Downloader</h3>
+    <button id="download">Download Now</button>
+    <p id="status"></p>
+    <script type= "module" src="popup.js"></script>
 </body>
 </html>
