--- a/popup/popup.html
+++ b/popup/popup.html
@@ -9,6 +9,9 @@
     <h3>Echo 360 Lecture Downloader</h3>
     <button id="download">Download Now</button>
     <p id="status"></p>
-    <script type= "module" src="popup.js"></script>
+
+    <script src="../libs/ffmpeg.min.js"></script>
+    <script src="../libs/ffmpeg-core.js"></script>
+    <script src="popup.js"></script>
 </body>
 </html>
