implement meaningful names to output files

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,9 +6,10 @@
     <title>Chrome Addon v3: popup</title>
 </head>
 <body>
-    <h3>Echo 360 Lecture Downloader</h3>
+    <h3>Warwick Lecture Downloader</h3>
     <button id="download">Download Now</button>
     <p id="status"></p>
+    <progress id="progress-bar" value="0" max="100"></progress>
 
     <script src="../libs/ffmpeg.min.js"></script>
     <script src="../libs/ffmpeg-core.js"></script>
