--- a/popup/popup.html
+++ b/popup/popup.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="popup.css">
-    <title>Chrome Addon v3: popup</title>
+    <title>Warwick Lecture Downloader</title>
 </head>
 <body>
     <h3>Warwick Lecture Downloader</h3>
     <button id="download">Download Now</button>
     <p id="status"></p>
-    <progress id="progress-bar" value="0" max="100"></progress>
+    <!-- <progress id="progress-bar" value="0" max="100"></progress> -->
 
     <script src="../libs/ffmpeg.min.js"></script>
     <script src="../libs/ffmpeg-core.js"></script>
