implement progress bar to disappear and appear

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,12 +7,14 @@
 </head>
 <body>
     <h3>Warwick Lecture Downloader</h3>
-    <button id="download">Download Now</button>
-    <p id="status"></p>
-    <!-- <progress id="progress-bar" value="0" max="100"></progress> -->
-
+    <div class="container">
+        <button id="download">Download Now</button>
+        <p id="status"></p>
+        <progress id="progress-bar" value="0" max="100"></progress>
+    </div>
     <script src="../libs/ffmpeg.min.js"></script>
     <script src="../libs/ffmpeg-core.js"></script>
     <script src="popup.js"></script>
 </body>
 </html>
+
