add stupid button

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,7 +8,11 @@
 <body>
     <h3>Warwick Lecture Downloader</h3>
     <div class="container">
-        <button id="download">Download Now</button>
+        <button id="download" class="btn">
+            <span class="btn__inner">
+              <span class="btn__text">Download</span>
+            </span>
+        </button>
         <p id="status"></p>
         <progress id="progress-bar" value="0" max="100"></progress>
     </div>
